<resources>
    <string name="app_name">COMP602_Restaurant_Mobile_Application</string>
    <string name="menu_search">search</string>
    <string name="menu_shopping">shopping</string>
    <string name="menu_profile">profile</string>
    <string name="Restaurant1">Restaurant1</string>
    <string name="Restaurant2">Restaurant2</string>
    <string name="Restaurant3">Restaurant3</string>
    <string name="Restaurant4">Restaurant4</string>
    <string name="menu_of_R1">Restaurant 1 menu</string>
    <string name="R1_meal1">Fish Fillet Noodle Soup \n $10</string>
    <string name="R1_meal2">Curry Fish Fillet Noodle Soup \n $15</string>
    <string name="R1_meal3">Chicken Curry Laksa \n $10</string>
    <string name="R1_meal4">Vegetable Curry Laksa \n $12</string>
    <string name="R1_meal5">Seafood Curry Laksa \n $12.99</string>
    <string name="R1_meal6">Pappa Char koay Teaw \n $7.99</string>
    <string name="R1_meal7">Pappa Fried Rice Noodles \n $15</string>
    <string name="R1_meal8">Nasi Lemak With Beef Rendang \n $9</string>
    <string name="R1_meal9">HaiNan Curry Chicken Chop With Rice \n $11</string>
    <string name="R1_meal10">Steamed Mantau With KAYA \n $10.99</string>
    <string name="R1_meal11">Roti KAYA \n $7.99</string>
    <string name="R1_meal12">Roti Bom \n $6</string>
    <string name="R1_foodPhoto">R1 food\'s Photo</string>
    <string name="R2_foodPhoto">R2 food\'s Photo</string>
    <string name="R3_foodPhoto">R3 food\'s Photo</string>
    <string name="R4_foodPhoto">R4 food\'s Photo</string>
    <string name="confirm">Confirm</string>
    <string name="Nspicy">No Spicy</string>
    <string name="Sspicy">Small Spicy</string>
    <string name="Mspicy">Medium Spicy</string>
    <string name="spicy">Spicy</string>
    <string name="food">Food</string>
    <string name="drink">drink</string>
    <string name="dessert">dessert</string>
    <string name="R_name"> Restaurant Name</string>
    <string name="order_detail">Order detail</string>
    <string name="order_string">Hello</string>
    <string name="send">send</string>
    <string name="sendButton">SEND</string>
    <string name="title_activity_scan_qr">scanQR</string>
    <string name="title_activity_generate_qr">generateQR</string>
    <string name="title_activity_display_infor">DisplayInfor</string>
    <string name="search">Search</string>
</resources>