<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pappaRich_meal1"
        android:layout_gravity="center"
        android:textSize="25sp"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nspicy"

        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sspicy"

        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mspicy"

        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spicy"

        />

    <Button
        android:id="@+id/confirmbutton"
        android:text="@string/confirm"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/colorAccent"
      />
</LinearLayout>